test/ite_missing_else.psi
// compilation errors

def main(){
    x := flip(1/2);
    y := if x { 2 }; // error
    return y;
}
